add one py file

--- a/weather_dif_temperature.ipynb
+++ b/weather_dif_temperature.ipynb
@@ -13,8 +13,7 @@
    "id": "5533c121",
    "metadata": {},
    "source": [
-    "1. День, с минимальной разницей \"ощущаемой\" и фактической температуры ночью (с указанием разницы в градусах Цельсия) \n",
-    "2. Максимальную продолжительностью светового дня (считать, как разницу между временем заката и рассвета) за ближайшие 5 дней (включая текущий), с указанием даты."
+    "### Найти день, с минимальной разницей \"ощущаемой\" и фактической температуры ночью (с указанием разницы в градусах Цельсия) \n"
    ]
   },
   {
@@ -184,7 +183,7 @@
     "        if re.split(':| ', i['dt_txt'])[-3] in ('00', '03'): # ночь это промежуток времени с 00:00 - 03:00\n",
     "            data_night.append(i['main']['temp'])\n",
     "        else: \n",
-    "            data_night.append(0)\n",
+    "            data_night.append(0) # так как нас интересует только ночное время\n",
     "except Exception as e:\n",
     "    print(\"Exception (forecast):\", e)\n",
     "    pass"
@@ -641,37 +640,6 @@
     "plt.legend(title='Параметры')\n",
     "plt.title('График температур')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "64a79870",
-   "metadata": {},
-   "source": [
-    "2. Найти максимальную продолжительностью светового дня (считать, как разницу между временем заката и рассвета) за ближайшие 5 дней (включая текущий), с указанием даты."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "7c0c32a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Максимальная продолжительность светого дня 2021-12-18 составляет 07:04:58\n"
-     ]
-    }
-   ],
-   "source": [
-    "res = req.get(\"https://api.openweathermap.org/data/2.5/onecall\", \n",
-    "              params = {'lat': 55.7522, 'lon': 37.6156, 'exclude': 'hourly', 'APPID': appid})\n",
-    "data = res.json()\n",
-    "print(f\"Максимальная продолжительность светого дня \\\n",
-    "{datetime.utcfromtimestamp(int(str(i['dt']))).strftime('%Y-%m-%d')} составляет \\\n",
-    "{datetime.utcfromtimestamp(int(str(max((i['sunset'] - i['sunrise']) for i in data['daily'])))).strftime('%H:%M:%S')}\")\n"
    ]
   }
  ],
